core/gen/HydroParser.java
package core.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class HydroParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAREN=1, RPAREN=2, LBRACE=3, RBRACE=4, LLIST=5, RLIST=6, ASSIGN=7, DOT=8, 
		COMMA=9, AT=10, SEMI=11, COLON=12, TILDE=13, QUESTION=14, LARROW=15, RARROW=16, 
		ARROWASSIGN=17, DOUBLECOLONS=18, INCREMENT=19, DECREMENT=20, AMPERSAND=21, 
		ARITHMATICOPERATORS=22, COMPARATIVEOPERATORS=23, SHORTASSIGNOPS=24, BOOLEANOPERATORS=25, 
		UNARYOPERATOR=26, THREAD=27, TASK=28, FUNC=29, IF=30, ELSE=31, WHILE=32, 
		FOR=33, IMPORT=34, FROM=35, CLASS=36, NEW=37, OVERRIDE=38, COMMENT=39, 
		WS=40, BOOL=41, NULL=42, ID=43, INT=44, FLOAT=45, STRING=46, ANY=47, TYPE=48;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_stmt = 2, RULE_import_stmt = 3, 
		RULE_assignments = 4, RULE_funcassignment = 5, RULE_varassignment = 6, 
		RULE_clsassign = 7, RULE_classdef = 8, RULE_define_blocks = 9, RULE_getattribs = 10, 
		RULE_attrassign = 11, RULE_call = 12, RULE_conditional_stmt = 13, RULE_if_stmt = 14, 
		RULE_while_stmt = 15, RULE_for_stmt = 16, RULE_conditional_block = 17, 
		RULE_args = 18, RULE_params = 19, RULE_type_conversion = 20, RULE_list = 21, 
		RULE_expr = 22, RULE_atom = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "stmt", "import_stmt", "assignments", "funcassignment", 
			"varassignment", "clsassign", "classdef", "define_blocks", "getattribs", 
			"attrassign", "call", "conditional_stmt", "if_stmt", "while_stmt", "for_stmt", 
			"conditional_block", "args", "params", "type_conversion", "list", "expr", 
			"atom"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "'['", "']'", "'='", "'.'", "','", 
			"'@'", "';'", "':'", "'~'", "'?'", "'->'", "'<-'", "'=>'", "'::'", "'++'", 
			"'--'", "'&'", null, null, null, null, "'!'", "'thread'", "'task'", "'func'", 
			"'if'", "'else'", "'while'", "'for'", "'import'", "'from'", "'class'", 
			"'new'", "'override'", null, null, null, "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LLIST", "RLIST", "ASSIGN", 
			"DOT", "COMMA", "AT", "SEMI", "COLON", "TILDE", "QUESTION", "LARROW", 
			"RARROW", "ARROWASSIGN", "DOUBLECOLONS", "INCREMENT", "DECREMENT", "AMPERSAND", 
			"ARITHMATICOPERATORS", "COMPARATIVEOPERATORS", "SHORTASSIGNOPS", "BOOLEANOPERATORS", 
			"UNARYOPERATOR", "THREAD", "TASK", "FUNC", "IF", "ELSE", "WHILE", "FOR", 
			"IMPORT", "FROM", "CLASS", "NEW", "OVERRIDE", "COMMENT", "WS", "BOOL", 
			"NULL", "ID", "INT", "FLOAT", "STRING", "ANY", "TYPE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HydroParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HydroParser.EOF, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydroVisitor ) return ((HydroVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 420251476951074L) != 0) {
				{
				{
				setState(48);
				stmt();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(HydroParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(HydroParser.RBRACE, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydroVisitor ) return ((HydroVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(LBRACE);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 420251476951074L) != 0) {
				{
				{
				setState(57);
				stmt();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public Conditional_stmtContext conditional_stmt() {
			return getRuleContext(Conditional_stmtContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(HydroParser.SEMI, 0); }
		public AssignmentsContext assignments() {
			return getRuleContext(AssignmentsContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ClassdefContext classdef() {
			return getRuleContext(ClassdefContext.class,0);
		}
		public Import_stmtContext import_stmt() {
			return getRuleContext(Import_stmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydroVisitor ) return ((HydroVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmt);
		int _la;
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				conditional_stmt();
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(66);
					match(SEMI);
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				assignments();
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(70);
					match(SEMI);
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				call();
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(74);
					match(SEMI);
					}
				}

				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				expr(0);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(78);
					match(SEMI);
					}
				}

				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(81);
				classdef();
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(82);
					match(SEMI);
					}
				}

				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(85);
				import_stmt();
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(86);
					match(SEMI);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Import_stmtContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(HydroParser.IMPORT, 0); }
		public TerminalNode LBRACE() { return getToken(HydroParser.LBRACE, 0); }
		public List<TerminalNode> STRING() { return getTokens(HydroParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(HydroParser.STRING, i);
		}
		public TerminalNode RBRACE() { return getToken(HydroParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(HydroParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(HydroParser.COMMA, i);
		}
		public TerminalNode FROM() { return getToken(HydroParser.FROM, 0); }
		public Import_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydroVisitor ) return ((HydroVisitor<? extends T>)visitor).visitImport_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_stmtContext import_stmt() throws RecognitionException {
		Import_stmtContext _localctx = new Import_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_import_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(IMPORT);
			setState(92);
			match(LBRACE);
			setState(93);
			match(STRING);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(94);
				match(COMMA);
				setState(95);
				match(STRING);
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(RBRACE);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FROM) {
				{
				setState(102);
				match(FROM);
				setState(103);
				match(STRING);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentsContext extends ParserRuleContext {
		public VarassignmentContext varassignment() {
			return getRuleContext(VarassignmentContext.class,0);
		}
		public FuncassignmentContext funcassignment() {
			return getRuleContext(FuncassignmentContext.class,0);
		}
		public AssignmentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignments; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydroVisitor ) return ((HydroVisitor<? extends T>)visitor).visitAssignments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentsContext assignments() throws RecognitionException {
		AssignmentsContext _localctx = new AssignmentsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignments);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				varassignment();
				}
				break;
			case FUNC:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				funcassignment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncassignmentContext extends ParserRuleContext {
		public TerminalNode FUNC() { return getToken(HydroParser.FUNC, 0); }
		public TerminalNode ID() { return getToken(HydroParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(HydroParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(HydroParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FuncassignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcassignment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydroVisitor ) return ((HydroVisitor<? extends T>)visitor).visitFuncassignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncassignmentContext funcassignment() throws RecognitionException {
		FuncassignmentContext _localctx = new FuncassignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcassignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(FUNC);
			setState(111);
			match(ID);
			setState(112);
			match(LPAREN);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(113);
				params();
				}
			}

			setState(116);
			match(RPAREN);
			setState(117);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarassignmentContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HydroParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(HydroParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode TYPE() { return getToken(HydroParser.TYPE, 0); }
		public VarassignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varassignment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydroVisitor ) return ((HydroVisitor<? extends T>)visitor).visitVarassignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarassignmentContext varassignment() throws RecognitionException {
		VarassignmentContext _localctx = new VarassignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varassignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(119);
				match(TYPE);
				}
			}

			setState(122);
			match(ID);
			setState(123);
			match(ASSIGN);
			setState(124);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClsassignContext extends ParserRuleContext {
		public TerminalNode NEW() { return getToken(HydroParser.NEW, 0); }
		public TerminalNode ID() { return getToken(HydroParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(HydroParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(HydroParser.RPAREN, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public ClsassignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clsassign; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydroVisitor ) return ((HydroVisitor<? extends T>)visitor).visitClsassign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClsassignContext clsassign() throws RecognitionException {
		ClsassignContext _localctx = new ClsassignContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_clsassign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(NEW);
			setState(127);
			match(ID);
			setState(128);
			match(LPAREN);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((_la) & ~0x3f) == 0 && ((1L << _la) & 138676105379874L) != 0) {
				{
				setState(129);
				args();
				}
			}

			setState(132);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassdefContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(HydroParser.CLASS, 0); }
		public List<TerminalNode> ID() { return getTokens(HydroParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HydroParser.ID, i);
		}
		public List<TerminalNode> LBRACE() { return getTokens(HydroParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(HydroParser.LBRACE, i);
		}
		public Define_blocksContext define_blocks() {
			return getRuleContext(Define_blocksContext.class,0);
		}
		public List<TerminalNode> RBRACE() { return getTokens(HydroParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(HydroParser.RBRACE, i);
		}
		public TerminalNode RARROW() { return getToken(HydroParser.RARROW, 0); }
		public TerminalNode COMMA() { return getToken(HydroParser.COMMA, 0); }
		public ClassdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydroVisitor ) return ((HydroVisitor<? extends T>)visitor).visitClassdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassdefContext classdef() throws RecognitionException {
		ClassdefContext _localctx = new ClassdefContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_classdef);
		int _la;
		try {
			setState(160);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				match(CLASS);
				setState(135);
				match(ID);
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==RARROW) {
					{
					setState(136);
					match(RARROW);
					setState(137);
					match(ID);
					}
				}

				setState(140);
				match(LBRACE);
				setState(141);
				define_blocks();
				setState(142);
				match(RBRACE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				match(CLASS);
				setState(145);
				match(ID);
				setState(154);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
				case 1:
					{
					setState(146);
					match(LBRACE);
					setState(147);
					match(RARROW);
					setState(148);
					match(ID);
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==COMMA) {
						{
						setState(149);
						match(COMMA);
						setState(150);
						match(ID);
						}
					}

					setState(153);
					match(RBRACE);
					}
					break;
				}
				setState(156);
				match(LBRACE);
				setState(157);
				define_blocks();
				setState(158);
				match(RBRACE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Define_blocksContext extends ParserRuleContext {
		public List<FuncassignmentContext> funcassignment() {
			return getRuleContexts(FuncassignmentContext.class);
		}
		public FuncassignmentContext funcassignment(int i) {
			return getRuleContext(FuncassignmentContext.class,i);
		}
		public List<VarassignmentContext> varassignment() {
			return getRuleContexts(VarassignmentContext.class);
		}
		public VarassignmentContext varassignment(int i) {
			return getRuleContext(VarassignmentContext.class,i);
		}
		public Define_blocksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_blocks; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydroVisitor ) return ((HydroVisitor<? extends T>)visitor).visitDefine_blocks(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Define_blocksContext define_blocks() throws RecognitionException {
		Define_blocksContext _localctx = new Define_blocksContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_define_blocks);
		int _la;
		try {
			setState(174);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==FUNC) {
					{
					{
					setState(162);
					funcassignment();
					}
					}
					setState(167);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID || _la==TYPE) {
					{
					{
					setState(168);
					varassignment();
					}
					}
					setState(173);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GetattribsContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(HydroParser.DOT, 0); }
		public List<TerminalNode> ID() { return getTokens(HydroParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HydroParser.ID, i);
		}
		public TerminalNode STRING() { return getToken(HydroParser.STRING, 0); }
		public TerminalNode LPAREN() { return getToken(HydroParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(HydroParser.RPAREN, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public GetattribsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_getattribs; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydroVisitor ) return ((HydroVisitor<? extends T>)visitor).visitGetattribs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GetattribsContext getattribs() throws RecognitionException {
		GetattribsContext _localctx = new GetattribsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_getattribs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==STRING) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(177);
			match(DOT);
			setState(178);
			match(ID);
			setState(184);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,23,_ctx) ) {
			case 1:
				{
				setState(179);
				match(LPAREN);
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((_la) & ~0x3f) == 0 && ((1L << _la) & 138676105379874L) != 0) {
					{
					setState(180);
					args();
					}
				}

				setState(183);
				match(RPAREN);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttrassignContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(HydroParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HydroParser.ID, i);
		}
		public TerminalNode DOT() { return getToken(HydroParser.DOT, 0); }
		public TerminalNode ASSIGN() { return getToken(HydroParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AttrassignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attrassign; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydroVisitor ) return ((HydroVisitor<? extends T>)visitor).visitAttrassign(this);
			else return visitor.visitChildren(this);
		}
	}
